<resources>
    <!-- Application information -->
    <string name="app_name">Flagorama</string>
    <string name="app_copyright">© 2020&#8211;21, Tony Guyot</string>

    <!-- Navigation drawer -->
    <string name="nav_header_title">Flagorama</string>
    <string name="nav_header_subtitle">Flags of the world</string>
    <string name="menu_title_information">Information</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Drawer menu items -->
    <string name="menu_home">Global</string>
    <string name="menu_region">Region</string>
    <string name="menu_country">Country</string>
    <string name="menu_flag">Flag</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_about">About</string>
    <string name="menu_source">Source Code</string>
    <string name="menu_privacy">Data Privacy</string>
    <string name="menu_licences">Licences</string>
    <string name="menu_report">Report</string>

    <!-- Overflow menu items -->
    <string name="action_settings">Settings</string>

    <!-- About screen -->
    <string name="about_website">tonyguyot.github.io</string>

    <!-- Country details screen -->
    <string name="country_sub_region">Where:</string>
    <string name="country_capital">Capital:</string>
    <string name="country_population">Population:</string>
    <string name="country_area">Area (km²):</string>
    <string name="country_hint_display_flag">Click on the flag to display it full screen.</string>

    <!-- Menu for country details screen -->
    <string name="menu_add_favorite">add as favorite</string>
    <string name="info_added_to_favorite">%s has been added to the favorites</string>
    <string name="info_removed_from_favorite">%s has been removed from the favorites</string>

    <!-- Favorites screen -->
    <string name="fav_title">Favorites</string>
    <string name="fav_empty">You have not selected any country as favorite yet.</string>

    <!-- Accessibility strings -->
    <string name="country_flag_description">Flag</string>

    <!-- Error messages -->
    <string name="error_no_response_from_server">No response received from server. Please retry later.</string>
</resources>
