<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_header_subtitle">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_action_globe"
                android:title="@string/menu_home"
                />
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_action_heart"
                android:title="@string/menu_favorite"
                />
        </menu>
    </item>

    <item android:title="@string/menu_title_information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_flag"
                android:title="@string/menu_about"
                />
            <item
                android:id="@+id/nav_source"
                android:icon="@drawable/ic_action_github"
                android:title="@string/menu_source"
                />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_action_key"
                android:title="@string/menu_privacy"
                />
            <item
                android:id="@+id/nav_licences"
                android:icon="@drawable/ic_action_news"
                android:title="@string/menu_licences"
                />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_action_bell"
                android:title="@string/menu_report"
                />
        </menu>
    </item>

</menu>
