<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@+id/nav_home">

    <!-- Home screen: List of world regions -->
    <fragment
        android:id="@+id/nav_home"
        android:name="io.github.tonyguyot.flagorama.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_fragment_to_region_fragment"
            app:destination="@id/nav_region"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <!-- Region screen: List of countries for a selected region -->
    <fragment
        android:id="@+id/nav_region"
        android:name="io.github.tonyguyot.flagorama.ui.region.RegionFragment"
        android:label="@string/menu_region"
        tools:layout="@layout/fragment_region">

        <argument
            android:name="regionId"
            app:argType="string"
            app:nullable="false"
            />
        <argument
            android:name="regionName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"
            />

        <action
            android:id="@+id/action_region_fragment_to_country_fragment"
            app:destination="@id/nav_country"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <!-- Country screen: Details about a selected country -->
    <fragment
        android:id="@+id/nav_country"
        android:name="io.github.tonyguyot.flagorama.ui.country.CountryFragment"
        android:label="@string/menu_country"
        tools:layout="@layout/fragment_country">

        <argument
            android:name="countryId"
            app:argType="string"
            app:nullable="false"
            />
        <argument
            android:name="countryName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"
            />

        <action
            android:id="@+id/action_country_fragment_to_flag_fragment"
            app:destination="@id/nav_flag"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <!-- Flag screen: The flag is shown full screen -->
    <fragment
        android:id="@+id/nav_flag"
        android:name="io.github.tonyguyot.flagorama.ui.country.FlagFragment"
        android:label="@string/menu_flag"
        tools:layout="@layout/fragment_flag">

        <argument
            android:name="flagUrl"
            app:argType="string"
            app:nullable="false"
            />
        <argument
            android:name="countryName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"
            />
    </fragment>

    <!-- Favorite screen: List of countries that are selected as favorites -->
    <fragment
        android:id="@+id/nav_favorite"
        android:name="io.github.tonyguyot.flagorama.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite">

        <argument
            android:name="regionId"
            app:argType="string"
            app:nullable="false"
            />
        <argument
            android:name="regionName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"
            />

        <action
            android:id="@+id/action_favorite_fragment_to_country_fragment"
            app:destination="@id/nav_country"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <!-- For future use -->
    <fragment
        android:id="@+id/nav_quiz"
        android:name="io.github.tonyguyot.flagorama.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz"
        />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.github.tonyguyot.flagorama.ui.tools.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/nav_about"
        android:name="io.github.tonyguyot.flagorama.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"
        />

    <fragment
        android:id="@+id/nav_source"
        android:name="io.github.tonyguyot.flagorama.ui.send.SendFragment"
        android:label="@string/menu_source"
        tools:layout="@layout/fragment_send"
        />
</navigation>